test/src/e2e_vm_tests/test_programs/should_pass/language/struct_destructuring/src/main.sw
script;

// Tests struct destructuring

fn main() -> u64 {
    let data = Data {
        value: 42,
    };

    let Data { value } = data;
    return value;
}

struct Data { 
    value: u64,
}
