test/src/e2e_vm_tests/test_programs/should_fail/excess_associated_fn_arguments/src/main.sw
library;

struct Data { }

impl Data {
    fn add_values(_first: Data, _other: Data) -> u64 {
        0
    }
}

pub fn main() {
    let data1 = Data { };
    let data2 = Data { };
    Data::add_values(data1, data2, data2);
}